[package]
name = "mobi-sys"
version = "0.1.1"
authors = ["Max Böcker <mobi@morbatex.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "FFI bindings to libmobi"
homepage = "https://github.com/morbatex/mobi-sys"
repository = "https://github.com/morbatex/mobi-sys"
readme = "README.md"
keywords = ["mobi", "bindings", "ebook", "azw"]
categories = ["external-ffi-bindings"]

build = "build.rs"
links = "libmobi"



[dependencies]


[build-dependencies]
bindgen = "0.44.0"
